--- a/app/src/main/res/layout/activity_texting.xml
+++ b/app/src/main/res/layout/activity_texting.xml
@@ -1,12 +1,113 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.ralemproductions.trolltext.Texting">
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:weightSum="5" >
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1.1"
+        android:orientation="horizontal"
 
-</RelativeLayout>
+        android:weightSum="3" >
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:text="Yes"
+            android:onClick="Button1"
+
+            android:textColor="#ffff00"
+            android:textSize="60sp"
+
+            android:background="@drawable/b1"
+            android:id="@+id/b1"
+            />
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:textColor="#ffff00"
+            android:textSize="60sp"
+            android:text="No"
+            android:onClick="Button2"
+            android:background="@drawable/b1"
+            android:id="@+id/b2" />
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:id="@+id/b3"
+            android:background="@drawable/b1"
+            android:textColor="#ffff00"
+            android:textSize="30sp"
+            android:onClick="Button3"
+            android:text="Call Me"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1.1"
+        android:orientation="horizontal"
+        android:weightSum="3" >
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:id="@+id/b4"
+            android:background="@drawable/b1"
+            android:textColor="#ffff00"
+            android:textSize="40sp"
+            android:onClick="Button4"
+            android:text="Thank you"
+            />
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:id="@+id/b5"
+            android:background="@drawable/b1"
+            android:textColor="#ffff00"
+            android:textSize="35sp"
+            android:onClick="Button5"
+            android:text="Give me 15"
+            />
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:id="@+id/b6"
+            android:background="@drawable/b1"
+            android:textColor="#ffff00"
+            android:textSize="35sp"
+            android:onClick="Button6"
+            android:text="Help"
+            />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1.1"
+        android:orientation="horizontal"
+        android:weightSum="3" >
+
+        <ListView android:id="@+id/SMSList"
+            android:layout_height="227dp"
+            android:textSize="75sp"
+            android:layout_width="match_parent"
+            />
+    </LinearLayout>
+
+
+</LinearLayout>
