--- a/app/src/main/res/layout/activity_dial.xml
+++ b/app/src/main/res/layout/activity_dial.xml
@@ -19,11 +19,8 @@
             android:layout_weight="1"
             android:text="1"
             android:onClick="Button1"
-
             android:textColor="#ffff00"
             android:textSize="100sp"
-
-            android:background="@drawable/b1"
             android:id="@+id/b1"
             />
 
@@ -35,7 +32,7 @@
             android:textSize="100sp"
             android:text="2"
             android:onClick="Button2"
-            android:background="@drawable/b1"
+
             android:id="@+id/b2" />
 
         <Button
@@ -43,7 +40,7 @@
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:id="@+id/b3"
-            android:background="@drawable/b1"
+
             android:textColor="#ffff00"
             android:textSize="100sp"
             android:onClick="Button3"
@@ -63,7 +60,7 @@
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:id="@+id/b4"
-            android:background="@drawable/b1"
+
             android:textColor="#ffff00"
             android:textSize="100sp"
             android:onClick="Button4"
@@ -75,7 +72,7 @@
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:id="@+id/b5"
-            android:background="@drawable/b1"
+
             android:textColor="#ffff00"
             android:textSize="100sp"
             android:onClick="Button5"
@@ -87,7 +84,7 @@
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:id="@+id/b6"
-            android:background="@drawable/b1"
+
             android:textColor="#ffff00"
             android:textSize="100sp"
             android:onClick="Button6"
@@ -108,7 +105,7 @@
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:id="@+id/b7"
-            android:background="@drawable/b1"
+
             android:textColor="#ffff00"
             android:textSize="100sp"
             android:onClick="Button7"
@@ -120,7 +117,7 @@
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:id="@+id/b8"
-            android:background="@drawable/b1"
+
             android:textColor="#ffff00"
             android:textSize="100sp"
             android:onClick="Button8"
@@ -132,7 +129,7 @@
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:id="@+id/b9"
-            android:background="@drawable/b1"
+
             android:text="9"
             android:onClick="Button9"
             android:textColor="#ffff00"
@@ -151,7 +148,7 @@
             android:layout_width="0dp"
             android:layout_height="fill_parent"
             android:layout_weight="1"
-            android:background="@drawable/b1"
+
             android:id="@+id/b0"
             android:onClick="Button0"
             android:textColor="#ffff00"
@@ -162,12 +159,13 @@
             android:layout_width="0dp"
             android:layout_height="fill_parent"
             android:layout_weight="2"
-            android:background="@drawable/b1"
+
             android:id="@+id/useless"
-            android:onClick="ButtonDelete"
+            android:onClick="ButtonCall"
             android:textColor="#ff0000"
             android:textSize="40sp"
-            android:text="Enter # to text"  />
+            android:text="Proceed!"
+            android:nestedScrollingEnabled="false" />
 
     </LinearLayout>
     <LinearLayout
@@ -178,7 +176,7 @@
         android:weightSum="2" >
         <Button
             android:layout_width="0dp"
-            android:background="@drawable/b1"
+
             android:layout_height="fill_parent"
             android:layout_weight="1.5"
             android:onClick="ButtonCall"
@@ -193,7 +191,7 @@
             android:layout_weight=".5"
             android:id="@+id/bDelete"
             android:onClick="ButtonDelete"
-            android:background="@drawable/b1"
-            />
+
+            android:text="&lt;&lt;" />
     </LinearLayout>
 </LinearLayout>
