--- a/app/src/main/res/layout/activity_dial.xml
+++ b/app/src/main/res/layout/activity_dial.xml
@@ -3,196 +3,173 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:weightSum="5" >
+    android:weightSum="5"
+    android:background="#B8B8B8">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1.1"
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
-
-        android:weightSum="3" >
+        android:layout_centerInParent="true"
+        android:weightSum="3"
+        android:baselineAligned="true">
 
         <ImageButton
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:text="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:onClick="Button1"
-            android:textColor="#ffff00"
-            android:textSize="100sp"
             android:id="@+id/b1"
             android:src="@drawable/one"
+            android:padding="0dp"
+            android:layout_alignParentLeft="true"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="30dp"
             />
 
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:textColor="#ffff00"
-            android:textSize="100sp"
-            android:text="2"
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:onClick="Button2"
+            android:id="@+id/b2"
+            android:src="@drawable/two"
+            android:padding="0dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            />
 
-            android:id="@+id/b2" />
-
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:id="@+id/b3"
-
-            android:textColor="#ffff00"
-            android:textSize="100sp"
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:onClick="Button3"
-            android:text="3"
+            android:id="@+id/b3"
+            android:src="@drawable/three"
+            android:padding="0dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="30dp"
             />
-    </LinearLayout>
+    </RelativeLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1.1"
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:weightSum="3" >
+        android:layout_centerInParent="true"
+        android:weightSum="3"
+        android:baselineAligned="true">
 
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:id="@+id/b4"
-
-            android:textColor="#ffff00"
-            android:textSize="100sp"
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:onClick="Button4"
-            android:text="4"
+            android:id="@+id/b4"
+            android:src="@drawable/four"
+            android:padding="0dp"
+            android:layout_alignParentLeft="true"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="30dp"
             />
 
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:id="@+id/b5"
-
-            android:textColor="#ffff00"
-            android:textSize="100sp"
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:onClick="Button5"
-            android:text="5"
+            android:id="@+id/b5"
+            android:src="@drawable/five"
+            android:padding="0dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
             />
 
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:id="@+id/b6"
-
-            android:textColor="#ffff00"
-            android:textSize="100sp"
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:onClick="Button6"
-            android:text="6"
+            android:id="@+id/b6"
+            android:src="@drawable/six"
+            android:padding="0dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="30dp"
             />
-    </LinearLayout>
+    </RelativeLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1.1"
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_centerInParent="true"
+        android:weightSum="3"
+        android:baselineAligned="true">
 
-        android:weightSum="3" >
-
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:id="@+id/b7"
-
-            android:textColor="#ffff00"
-            android:textSize="100sp"
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:onClick="Button7"
-            android:text="7"
+            android:id="@+id/b7"
+            android:src="@drawable/seven"
+            android:padding="0dp"
+            android:layout_alignParentLeft="true"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="30dp"
             />
 
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:id="@+id/b8"
-
-            android:textColor="#ffff00"
-            android:textSize="100sp"
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:onClick="Button8"
-            android:text="8"
+            android:id="@+id/b8"
+            android:src="@drawable/eight"
+            android:padding="0dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
             />
 
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:id="@+id/b9"
-
-            android:text="9"
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:onClick="Button9"
-            android:textColor="#ffff00"
-            android:textSize="100sp"
+            android:id="@+id/b9"
+            android:src="@drawable/nine"
+            android:padding="0dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="30dp"
             />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1.1"
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_centerInParent="true"
+        android:weightSum="3"
+        android:baselineAligned="true">
 
-        android:weightSum="3" >
-
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-
-            android:id="@+id/b0"
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:onClick="Button0"
-            android:textColor="#ffff00"
-            android:textSize="100sp"
-            android:text="0" />
-
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:layout_weight="2"
-
-            android:id="@+id/useless"
-            android:onClick="ButtonCall"
-            android:textColor="#ff0000"
-            android:textSize="40sp"
-            android:text="Proceed!"
-            android:nestedScrollingEnabled="false" />
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight=".6"
-        android:orientation="horizontal"
-        android:weightSum="2" >
-        <Button
-            android:layout_width="0dp"
-
-            android:layout_height="fill_parent"
-            android:layout_weight="1.5"
-            android:onClick="ButtonCall"
-            android:textSize="40sp"
-            android:text="8009999999"
-            android:id="@+id/call"
-
+            android:id="@+id/b0"
+            android:src="@drawable/zero"
+            android:padding="0dp"
+            android:layout_alignParentLeft="true"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="30dp"
             />
-        <Button android:layout_width="0dp"
 
-            android:layout_height="fill_parent"
-            android:layout_weight=".5"
-            android:id="@+id/bDelete"
-            android:onClick="ButtonDelete"
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="Proceed"
+            android:id="@+id/proceed"
+            android:src="@drawable/proceed"
+            android:padding="0dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="30dp"
+        />
 
-            android:text="&lt;&lt;" />
-    </LinearLayout>
+    </RelativeLayout>
+
 </LinearLayout>
