--- a/app/src/main/res/layout/activity_texting.xml
+++ b/app/src/main/res/layout/activity_texting.xml
@@ -129,7 +129,9 @@
     <SeekBar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/seekBar" />
+        android:id="@+id/seekBar"
+        android:max="20"
+        android:indeterminate="false" />
 
 
 </LinearLayout>
