--- a/app/src/main/res/layout/ralem_contact_listview.xml
+++ b/app/src/main/res/layout/ralem_contact_listview.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="com.example.ralemproductions.trolltext.chooseContact">
+    tools:context="com.ralem.ralemproductions.trolltext.chooseContact">
     <TextView
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
