--- a/app/src/main/res/layout/activity_texting.xml
+++ b/app/src/main/res/layout/activity_texting.xml
@@ -12,7 +12,7 @@
         android:orientation="vertical"
         android:background="@drawable/b1"
         android:weightSum="4"
-        android:id="@+id/">
+        android:id="@+id/sdfgsg">
 
 
         <TextView
