--- a/app/src/main/res/layout/activity_dial.xml
+++ b/app/src/main/res/layout/activity_dial.xml
@@ -22,7 +22,7 @@
             android:src="@drawable/one"
             android:padding="0dp"
             android:layout_alignParentLeft="true"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="30dp"
             android:layout_marginLeft="30dp"
             />
 
@@ -34,7 +34,7 @@
             android:src="@drawable/two"
             android:padding="0dp"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="30dp"
             />
 
         <ImageButton
@@ -44,9 +44,10 @@
             android:id="@+id/b3"
             android:src="@drawable/three"
             android:padding="0dp"
-            android:layout_alignTop="@+id/b2"
             android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            android:layout_marginTop="30dp"
+            android:layout_marginRight="30dp"
+            />
     </RelativeLayout>
 
     <RelativeLayout
@@ -157,17 +158,52 @@
             android:layout_marginLeft="30dp"
             />
 
-        <ImageButton
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="240dp"
             android:layout_height="wrap_content"
-            android:onClick="Proceed"
-            android:id="@+id/proceed"
-
-            android:padding="0dp"
+            android:layout_alignBottom="@+id/b0"
             android:layout_alignParentRight="true"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="30dp"
-        />
+            android:layout_alignParentEnd="true">
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="ButtonCall"
+                android:id="@+id/proceed"
+                android:padding="0dp"
+                android:layout_alignParentLeft="true"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="30dp"
+                android:src="@drawable/proceed"
+                />
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/back"
+                android:padding="0dp"
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="30dp"
+                android:src="@drawable/back"
+                android:onClick="ButtonDelete"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text=""
+                android:id="@+id/numberText"
+                android:layout_centerVertical="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignRight="@+id/proceed"
+                android:layout_alignEnd="@+id/proceed"
+                android:textColor="#ffffff"/>
+
+        </RelativeLayout>
+
 
     </RelativeLayout>
 
